# solana-arb-executor

./: README.md  install-custom.sh  install.sh
.claude-plugin/: marketplace.json
agents/: arb-execution-architect.md  rust-perf-engineer.md
commands/: add-killswitch.md  scaffold-executor.md  wire-yellowstone.md
rules/: no-auto-execute.md  rust-style.md
skill/: SKILL.md
skill/references/: architecture.md  delegation.md  jito-bundles.md  opportunity-detection.md  risk-and-killswitch.md  safety-rails.md  sdk-versions.md  streaming-ingestion.md  transaction-landing.md
skill/templates/: Cargo.toml
skill/templates/src/: config.rs  detector.rs  fees.rs  jito.rs  main.rs  risk.rs  stream.rs
